# circom-compat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: groth16.rs
src/: circom_qap.rs  ethereum.rs  lib.rs  zkey.rs
src/circom/: builder.rs  circuit.rs  mod.rs  qap.rs  r1cs_reader.rs
src/circom_wasm/: circom.rs  memory.rs  mod.rs  wasm.rs
src/circuit/: builder.rs  circom.rs  mod.rs  r1cs_reader.rs
src/witness/: circom.rs  memory.rs  mod.rs  witness_calculator.rs
test-vectors/: calculatewitness.js  circom2_multiplier2.wasm  circuit2.circom  circuit2.r1cs  circuit2.wasm  complex-circuit.circom  complex-circuit.r1cs  complex-circuit.wasm  input.json  mycircuit-input1.json  mycircuit-input2.json  mycircuit-input3.json  mycircuit.circom  mycircuit.sh  mycircuit.sym  nconstraints.circom  package-lock.json  proof.json  prove.sh  public.json  safe-circuit-witness.json  safe-circuit.sh  smtverifier10-input.json  smtverifier10-witness.0.json  smtverifier10-witness.json  smtverifier10.wasm  test.zkey  verification_key.json  witness.wtns  witness_calculator.js
test-vectors/circuit2_js/: witness.wtns
test-vectors/complex-circuit/: .gitignore  bench_all.sh  build.sh  complex-circuit-10000-10000.circom  complex-circuit-10000-10000.r1cs  complex-circuit-10000-10000.sym  complex-circuit-10000-10000.wasm  complex-circuit.circom.template  input.json  prepare.sh  prove.sh
test-vectors/mycircuit_js/: mycircuit.wasm
tests/: groth16.rs  solidity.rs  verifier.sol  verifier_artifact.json
