[package]
name = "ark-circom"
version = "0.2.0"
edition = "2021"
description = "Arkworks bindings to Circom's R1CS, for Groth16 Proof and Witness generation in Rust"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM operations
wasmer = "4.4.0"
wasmer-wasix = { version = "0.28.0" }
fnv = { version = "1.0.7", default-features = false }
num = { version = "0.4.3" }
num-traits = { version = "0.2.16", default-features = false }
num-bigint = { version = "0.4.3", default-features = false, features = ["rand"] }

# ZKP Generation
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.4.2", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.4.0" }
ark-groth16 = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }


# decoding of data
hex = "0.4.3"
byteorder = "1.4.3"


# error handling
thiserror = "1"
color-eyre = "0.6.2"

# ethereum compat
ruint = { version = "1.12", default-features = false ,optional = true, features=["alloc", "ark-ff-04"] }

cfg-if = "1.0.0"

[dev-dependencies]
criterion = "0.5.1"
hex-literal = "0.4.1"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
alloy = { version = "0.9", default-features = false, features = ["contract", "node-bindings"] }

[[bench]]
name = "groth16"
harness = false

[features]
default = ["wasmer/default", "circom-2", "ethereum"]
wasm = ["wasmer/js-default"]
bench-complex-all = []
circom-2 = []
ethereum = ["ruint"]
# This features does nothing but the ark_std::cfg_into_iter expectes it
parallel = []

